# LabPrimitive

./: .gitignore  CMakeLists.txt  Readme  apprentissage-homer-bart-lisa.arff  apprentissage-homer-bart.arff  apprentissage-homer-bart.txt  demo.vcxproj  validation-homer-bart-lisa.arff  validation-homer-bart.arff
GTI770-lab01-ÉquipeF/: apprentissage-homer-bart-lisa-other.txt  apprentissage-homer-bart-lisa.txt  apprentissage-homer-bart.txt  main.cpp  validation-homer-bart-lisa-other.txt  validation-homer-bart-lisa.txt  validation-homer-bart.txt
src/: main.cpp
